feat: implementação da paginação e do índice hash